fix zoom on iphone

--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -6,12 +6,16 @@ select {
 	border-radius: $radius-md;
 	padding: 8px;
 	color: #121217;
+
 	&:focus {
 		outline: $blue auto 1px;
 		background: white;
 	}
 
-  &.lg {
-    @extend .textMd;
-  }
+	&.lg {
+		@extend .textMd;
+	}
+	@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+		font-size: 16px;
+	}
 }
